<resources>
    <string name="app_name">Walk-a-mib</string>
    <string name="greeting">Ehilà,</string>
    <string name="dove_andiamo">DOVE ANDIAMO?</string>
    <string name="dummy_text" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="straight">Continua dritto</string>
    <string name="turn_left">Svolta a sinistra</string>
    <string name="turn_right">Svolta a destra</string>
    <string name="walk_at_mib" translatable="false">WALK\n@MIB</string>
    <string name="sign_in">Accedi</string>
    <string name="email" translatable="false">Email</string>
    <string name="password" translatable="false">Password</string>
    <string name="confirm_password">Conferma password</string>
    <string name="forgot_password">Password dimenticata?</string>
    <string name="sign_up_link">Non hai un account? Registrati</string>
    <string name="sign_in_link">Hai già un account? Accedi</string>
    <string name="sign_up">Registrati</string>
    <string name="maps_api_key" translatable="false">superSecureKey123</string>
    <string name="routes">Indicazioni</string>
    <string name="poi_info">Informazioni su %1$s</string>
    <string name="or">O</string>
    <string name="missing_poi_description">Non è stata fornita alcuna descrizione per questo punto di interesse</string>
    <string name="poi_not_working">Potrebbe essere non funzionante</string>
    <string name="poi_accessible">Accessibile a persone con disabilità</string>
    <string name="poi_not_accessible">Non accessibile a persone con disabilità</string>
    <string name="poi_indoor">Al chiuso</string>
    <string name="poi_outdoor">All\'aperto</string>
    <string name="sign_in_with_google">Accedi con Google</string>
    <string name="building">Edificio %1$s</string>
    <string name="floor">Piano %1$s</string>
    <string name="error_no_google_account_found_message">Non è stato trovato alcun account Google</string>
    <string name="settings">Impostazioni</string>
    <string name="night_mode">Modalità notte</string>
    <string name="accessible_paths_only">Solo percorsi accessibili</string>
    <string name="update_map_data">Aggiorna dati mappa</string>
    <string name="sign_out_from_the_account">Esci</string>
    <string name="missing_user_position">Clicca due volte su un punto di interesse per impostare la tua posizione attuale prima di cominciare la navigazione</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="resetPassword">Cambia password</string>

    <string name="error_email_or_password_not_valid">Email o password non validi</string>
    <string name="error_general_auth">Errore di autenticazione</string>
    <string name="error_password_not_match">Le password NON corrispondono</string>
</resources>