<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <TextView
            android:id="@+id/loginText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="@color/colorTitleSignInUp"
            android:textSize="40sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="20dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginText"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_input_alt"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            android:textColorHint="@color/colorTextHintSignInUp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:fontFamily="@font/montserrat"
                android:hint="@string/email"
                android:autofillHints="emailAddress"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorTextInputSignInUp"
                android:textCursorDrawable="@drawable/color_cursor_alt"
                android:textSize="17sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailContainer"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_input_alt"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorLineAndEyeTextInputSignInUp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            android:textColorHint="@color/colorTextHintSignInUp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:hint="@string/password"
                android:backgroundTint="@android:color/transparent"
                android:autofillHints="password"
                android:inputType="textPassword"
                android:textColor="@color/colorTextInputSignInUp"
                android:textCursorDrawable="@drawable/color_cursor_alt"
                android:textSize="17sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmPasswordContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorLineAndEyeTextInputSignInUp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordContainer"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_input_alt"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            android:textColorHint="@color/colorTextHintSignInUp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:hint="@string/confirm_password"
                android:backgroundTint="@android:color/transparent"
                android:autofillHints="password"
                android:inputType="textPassword"
                android:textColor="@color/colorTextInputSignInUp"
                android:textCursorDrawable="@drawable/color_cursor_alt"
                android:textSize="17sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_up_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_submit"
            android:fontFamily="@font/montserrat"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/colorTextSignInUpBtn"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/confirmPasswordContainer" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_in_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/sign_in_link"
            android:textAllCaps="false"
            android:textColor="@color/colorSignUpLink"
            android:textSize="16sp"
            android:fontFamily="@font/montserrat"
            app:layout_constraintTop_toBottomOf="@id/sign_up_btn"
            android:layout_marginTop="5dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>