<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.LoginFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <TextView
                android:id="@+id/loginText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:text="@string/sign_in"
                android:textColor="#3B5E50"
                android:textSize="40sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loginText"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_input_alt">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:fontFamily="@font/montserrat"
                    android:hint="@string/email"
                    android:autofillHints="emailAddress"
                    android:inputType="textEmailAddress"
                    android:textColor="#273F35"
                    android:textColorHint="#4F7D6B"
                    android:textCursorDrawable="@drawable/color_cursor_alt"
                    android:textSize="17sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emailContainer"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_input_alt"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="#3B5E50">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:hint="@string/password"
                    android:backgroundTint="@android:color/transparent"
                    android:autofillHints="password"
                    android:inputType="textPassword"
                    android:textColor="#273F35"
                    android:textColorHint="#4F7D6B"
                    android:textCursorDrawable="@drawable/color_cursor_alt"
                    android:textSize="17sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textColor="#3B5E50"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordContainer"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:textSize="14sp"
                android:fontFamily="@font/montserrat"/>

            <!--            <LinearLayout-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:orientation="horizontal"-->
            <!--                app:layout_constraintTop_toBottomOf="@id/forgotPassword">-->

            <!--                <androidx.appcompat.widget.AppCompatButton-->
            <!--                    android:id="@+id/sign_up_btn"-->
            <!--                    android:layout_width="match_parent"-->
            <!--                    android:layout_height="match_parent"-->
            <!--                    android:layout_marginTop="30dp"-->
            <!--                    android:background="@drawable/custom_btn"-->
            <!--                    android:text="@string/sign_up"-->
            <!--                    android:textAllCaps="false"-->
            <!--                    android:textColor="@color/colorText"-->
            <!--                    android:textSize="16sp"-->
            <!--                    android:fontFamily="@font/montserrat"-->
            <!--                    android:layout_weight="2" />-->

            <!--                <androidx.appcompat.widget.AppCompatButton-->
            <!--                    android:id="@+id/sign_in_btn"-->
            <!--                    android:layout_width="match_parent"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:layout_marginTop="30dp"-->
            <!--                    android:background="@drawable/custom_input"-->
            <!--                    android:text="@string/sign_in"-->
            <!--                    android:textAllCaps="false"-->
            <!--                    android:textColor="@color/colorTextInput"-->
            <!--                    android:textSize="18sp"-->
            <!--                    android:fontFamily="@font/montserrat"-->
            <!--                    android:layout_weight="1"-->
            <!--                    android:layout_marginStart="10dp" />-->

            <!--            </LinearLayout>-->

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sign_in_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/custom_submit"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="#DFECE7"
                android:textSize="18sp"
                android:fontFamily="@font/montserrat"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toBottomOf="@id/forgotPassword" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/sign_up_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="@string/sign_up_link"
                    android:textAllCaps="false"
                    android:textColor="#3b5e50"
                    android:textSize="16sp"
                    android:fontFamily="@font/montserrat"
                    app:layout_constraintTop_toBottomOf="@id/sign_in_btn"
                    android:layout_marginTop="5dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>